Cancel menu showing animation only if menu is opened.

Bug: 826005
Change-Id: I237dbf4ae50b02a225110fa72dc0bb0c0127535f
Reviewed-on: https://chromium-review.googlesource.com/993755
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547854}
Former-commit-id: a4c343c8162f37198e4ccf5400dc5a0f7568e3df